<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.poc</groupId>
    <artifactId>microservices-poc</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>microservices-poc</name>
    <description>Customer/Order microservices POC - Discovery, Gateway, Atomic services, Composite service</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <!-- Verify the latest 3.5.x patch on start.spring.io before you build -->
        <version>3.5.4</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- Spring Cloud 2025.0.x (Northfields) is the release train paired with Spring Boot 3.5.x -->
        <spring-cloud.version>2025.0.0</spring-cloud.version>
    </properties>

    <modules>
        <module>discovery-server</module>
        <module>api-gateway</module>
        <module>customer-service</module>
        <module>order-service</module>
        <module>composite-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- Without this, `mvn clean install` emits a plain jar containing only
                 this module's classes - `java -jar target/<module>.jar` then fails with
                 "no main manifest attribute". Declaring it here (inherited by every
                 module) makes each module repackage into an executable fat jar, so the
                 services can be started without going through `mvn spring-boot:run`.
                 The goal is a no-op for this pom-packaged parent. -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
